build: upgrade Java from 8 to 21 and Gradle to 8.5